# jugaad-data

./: '  .gitignore  .travis.yml  AKAMAI_FIX_TODOS.md  CHANGELOG.md  LICENSE.YOLO.md  README.md  blog_run_test.sh  check-version.ps1  pyproject.toml  pyproject.yaml  requirements.dev.txt  requirements.txt  run_tests.sh  setup.py
.devcontainer/: Dockerfile
.github/: ISSUE_TEMPLATE  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml  enhancements.yml  issue.yml
.github/workflows/: publish.yml  python-app.yml  python-publish.yml  run-tests.yml  version-check.yml
docs/: API_REFERENCE.md  HISTORICAL_DATA_GUIDE.md  LIVE_DATA_GUIDE.md  QUICKSTART.md  RBI_GUIDE.md  README.md  cli.md  holidays.md  index.md  index.rst  utilities.md
docs/bse/: index.md
docs/nse/: archives.md  history.md  index.md  live.md
docs/rbi/: index.md
jugaad_data/: 'ii'',  __init__.py  cli.py  holidays.py  util.py
jugaad_data/bse/: __init__.py  live.py
jugaad_data/nse/: __init__.py  archives.py  history.py  live.py
jugaad_data/rbi/: __init__.py
scripts/: check_version.py
tests/: fixtures_option_chain.py  test_bhav.py  test_bse_live.py  test_cli.py  test_daily.py  test_holidays.py  test_nse.py  test_nse_live.py  test_rbi.py  test_util.py
